25/06/15 Julien Dutheil
* Sorted files in subdirectories

19/09/14 -*- Version 2.2.0 -*-

19/09/14 Julien Dutheil
* Big cleaning in SequenceStatistics, functions have been renamed for consistency.

07/03/13 -*- Version 2.1.0 -*-

06/05/13 Julien Dutheil
* Fixed bug #67
* Fixed bug #8

09/02/12 -*- Version 2.0.3 -*-

09/06/11 -*- Version 2.0.2 -*-

08/06/11 Benoît Nabholz
* Added Fst calculation from Hudson, Slatkin and Maddison 1992 (Genetics 132:153).

28/02/11 -*- Version 2.0.1 -*-

07/02/11 -*- Version 2.0.0 -*-

21/07/08 -*- Version 1.4.0 -*-

18/11/09 Sylain Gaillard
* Switching from pointer to reference in many methods arguments and return
values.
* Introducing std::auto_ptr when methods need to return pointer to new
object.

16/11/09 Sylvain Gaillard
* No more "using namespace" in header files.

21/07/09 Sylvain Gaillard
* Removed Coord and CoordsTools classes (move to Utils/Point2D and
Utils/Point2DTools)
* Code update to use Point2D class instead of Coord class

23/06/09 Julien Dutheil
* Code update for compatibility with seqlib. Changed pointers to refs when
retrieving sequences.

19/06/09 Sylvain Gaillard
* Removed all 'using namespace' statement from header files

18/06/09 Sylvain Gaillard
* Fix SequenceTools::getFrequencies call in SequenceStatistics
* Fix SequenceStatistics::getTransitionsTransversionsRatio

21/07/08 -*- Version 1.4.0 -*-

15/04/09 Sylvain Gaillard
* Moved to UTF8 encoding
* Fixed computations in Fu & Li D statistics

08/04/09 Sylvain Gaillard
* Fixed calls to Seq::SymbolListTools::getCounts

31/03/09 Sylvain Gaillard
* Fixed Doxygen documentation @author tags
* Fixed warnings in bpp::DarwinDon::write bpp::DarwinVarSingle::write and
  bpp::MonolocusGenotypeTools::buildMonolocusGenotypeByAlleleKey

19/01/09 Sylvain Gaillard
* Fixed bug in PolymorphismSequenceContainerTools::getSelectedSequences now
  set the sequence count properly.

16/01/09 Sylvain Gaillard
* Fixed method PolymorphismSequenceContainerTools::extractGroup which now